# transformer

./: .envrc  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  index.html  main.py  pyproject.toml
.github/workflows/: deploy-docs.yml  tests.yml
assets/: styles.css
commands/: analyze_checkpoints.py  benchmark_generation.py  download_phi2.py  download_shards.py  download_wikitext.py  evaluate_perplexity.py  generate.py  interpret.py  midtrain.py  midtrain_stub.py  sampling_comparison.py  test_fineweb.py  train.py
docs/: .gitignore  PERPLEXITY.md  README.md  astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: attention.mdx  complete-model.mdx  embeddings.mdx  index.mdx  (+10 more)
docs/src/styles/: custom.css
examples/: evaluate_perplexity.py  generate.py  sampling_comparison.py  train.py
src/: interactive.py
src/transformer/: __init__.py  attention.py  block.py  checkpoint_utils.py  curriculum.py  dataset.py  dataset_utils.py  device_utils.py  domain_datasets.py  embeddings.py  feedforward.py  fineweb_dataset.py  forgetting_metrics.py  model.py  perplexity.py  sampling.py  scheduler.py  training_utils.py  wikitext_dataset.py
src/transformer/interpretability/: __init__.py  activation_patching.py  attention_analysis.py  induction_heads.py  logit_lens.py  visualizations.py
tests/: __init__.py  test_attention.py  test_block.py  test_checkpoint_loading.py  test_dataset_utils.py  test_embeddings.py  test_feedforward.py  test_interactive.py  test_kv_cache.py  test_model.py  test_perplexity.py  test_sampling.py  test_scheduler.py
