[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch>=2.9.0",
    "numpy>=1.26.0",
    "tiktoken>=0.5.0",
    "datasets>=4.3.0",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
