[project]
name = "transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "numpy>=1.26.0",
    "tiktoken>=0.5.0",
    "datasets>=4.3.0",
    "rich>=14.2.0",
    "questionary>=2.1.0",
]

[project.optional-dependencies]
rocm = [
    "torch>=2.5.0; sys_platform == 'linux'",
    "pytorch-triton-rocm; sys_platform == 'linux'",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

# PyTorch backend configuration
# By default, uses PyPI torch (CUDA on Linux, CPU elsewhere)
# For AMD GPUs (Linux only): uv sync --extra rocm
[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2"
explicit = true

[tool.uv.sources]
# When rocm extra is requested, get torch from ROCm index on Linux
# Only apply alternative source when the extra is active AND on Linux
torch = [
    { index = "pytorch-rocm", extra = "rocm", marker = "sys_platform == 'linux'" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm", marker = "sys_platform == 'linux'" },
]
